# tuxinjector

./: .gitignore  404.html  Cargo.toml  README.md  build.sh  flake.nix  index.html  mkdocs.yml  package.nix
.github/workflows/: build.yml  publish.yml
api/: index.html
api/key_names/: index.html
api/tx/: index.html
api/tx_active_res/: index.html
api/tx_bind/: index.html
api/tx_current_time/: index.html
api/tx_exec/: index.html
api/tx_get_key/: index.html
api/tx_get_mode/: index.html
api/tx_listen/: index.html
api/tx_log/: index.html
api/tx_press_key/: index.html
api/tx_set_sensitivity/: index.html
api/tx_sleep/: index.html
api/tx_state/: index.html
api/tx_switch_mode/: index.html
api/tx_toggle_app_visibility/: index.html
api/tx_toggle_gui/: index.html
api/tx_toggle_mode/: index.html
assets/: default.lua  tuxinjector-browser_x64
browser-overlays/: index.html
companion-apps/: index.html
config/backgrounds/: index.html
config/profiles/: index.html
crates/imgui-glow-renderer/: Cargo.toml
crates/imgui-glow-renderer/src/: lib.rs  versions.rs
crates/libspa/: Cargo.toml  build.rs
crates/tuxinjector/: Cargo.toml  build.rs
crates/tuxinjector-browser/: Cargo.toml
crates/tuxinjector-browser/src/: main.rs
crates/tuxinjector-capture/: Cargo.toml
crates/tuxinjector-capture/src/: lib.rs  mac_capture.rs  portal.rs
crates/tuxinjector-config/src/: defaults.rs  hot_reload.rs  key_names.rs  lib.rs  profile_override.rs  types.rs
crates/tuxinjector-core/: Cargo.toml
crates/tuxinjector-core/src/: color.rs  geometry.rs  lib.rs
crates/tuxinjector-gl-interop/src/: compositor.rs  gl_bindings.rs  gl_renderer.rs  (+2 more)
crates/tuxinjector-gui/: Cargo.toml
crates/tuxinjector-render/: Cargo.toml
cross/: Dockerfile.armv7  Dockerfile.i686
design-decisions/: index.html
injection/: index.html
input/: index.html
installation/: index.html
rendering/: index.html
search/: search_index.json
state-mods/: index.html
thanks/: index.html
(+81 files in other folders)
